Fix spacing for small screens

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -39,3 +39,9 @@
   background: #c13636a7;
   transform: rotate(-3deg);
 }
+
+@media screen and (max-width: 480px) {
+  #home > h2 {
+    padding-left: 0;
+  }
+}
