--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
-  height: 7vh;
+  height: 10vh;
   align-items: center;
   font-weight: bolder;
 }
