--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,14 @@ svg {
   font-size: 3rem;
   color: var(--heading-color);
 }
+
+/* 320px — 480px: Mobile devices
+481px — 768px: iPads, Tablets
+769px — 1024px: Small screens, laptops
+1025px — 1200px: Desktops, large screens */
+
+@media screen and (max-width: 480px) {
+  body {
+    margin: 0 10vw;
+  }
+}
